src/styles/global.css
:root {
  --blue: #66cfe7;
  --white: #ffffff;
  --orange: #ff5c00;
  --green: rgb(36, 194, 36);
}

body {
  font-family: "Cabin", sans-serif;
  font-size: 18px;
  color: 18191a;
  margin: 0;
  padding: 0;
  padding-top: 60px;
  min-height: 100vh;
}

/* =============== a11y ================= */
.skip-link {
  padding: 1em 2em;
  background-color: hsl(0, 100%, 100%);
  z-index: 101;
  clip: rect(0, 0, 0, 0);
  overflow: hidden;
  position: absolute;
  top: 0.3em;
}
.skip-link:focus {
  clip: auto;
  overflow: unset;
}

/* ===================== TEXT STYLING ======================*/

p {
  line-height: 2em;
}

blockquote {
  position: relative;
  padding-left: 1em;
  border-left: 0.2em solid var(--blue);
  font-size: 2em;
  line-height: 1.5em;
  font-weight: 100;
}

/* HEADINGS */

h1,
h2 {
  font-family: "Oswald", sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  margin: 0;
  margin-bottom: 20px;
}

h1 {
  font-size: 4rem;
}

h2 {
  font-size: 3.5rem;
}

h3,
h4 {
  font-family: "Cabin", sans-serif;
  margin: 20px 0;
  font-weight: 500;
}

h3 {
  font-size: 2rem;
}

h4 {
  font-size: 1.5rem;
}

/* HIGHLIGHTS */

h1 .highlight.blue {
  box-shadow: inset 0 -10px 0 0 white, inset 0 -40px 0 0 #66cfe7;
}

h1 .highlight.green {
  box-shadow: inset 0 -10px 0 0 white, inset 0 -40px 0 0 rgb(36, 194, 36);
}

h1 .highlight.orange {
  box-shadow: inset 0 -10px 0 0 white, inset 0 -40px 0 0 #ff5c00;
}

h2 .highlight.blue {
  box-shadow: inset 0 -5px 0 0 white, inset 0 -25px 0 0 #66cfe7;
}

h2 .highlight.green {
  box-shadow: inset 0 -5px 0 0 white, inset 0 -25px 0 0 rgb(36, 194, 36);
}

h2 .highlight.orange {
  box-shadow: inset 0 -5px 0 0 white, inset 0 -25px 0 0 #ff5c00;
}

h3 .highlight.blue,
h4 .highlight.blue {
  box-shadow: inset 0 0px 0 0 white, inset 0 -15px 0 0 #66cfe7;
}

h3 .highlight.green,
h4 .highlight.green {
  box-shadow: inset 0 0px 0 0 white, inset 0 -15px 0 0 rgb(36, 194, 36);
}

h3 .highlight.orange,
h4 .highlight.orange {
  box-shadow: inset 0 0px 0 0 white, inset 0 -15px 0 0 #ff5c00;
}

/*================== STRUCTURE COMPONENTS ======================== */
/* Main page structure */
main {
  margin-bottom: 40px;
}

section {
  position: relative;
  width: 90%;
  margin: auto;
  padding: 20px 0;
}

/* Secondary page segment */

.middle-segment {
  position: relative;
  background-color: #b9ffff50;
}

/* Images */

img {
  width: 100%;
  border-radius: 30px;
}

img.graph {
  border-radius: 0;
}

img.full-height {
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  height: 100%;
  transform: translate(-50%, -50%);
  width: auto;
}

.long-image-container {
  position: relative;
  overflow: hidden;
  height: 100%;
  border-radius: 30px;
}

/* Bubbles */
.bubble-img {
  width: 10%;
  border: 5px solid white;
  border-radius: 100%;
  padding: 10px;
  background-color: #110077;
  display: none;
  overflow: visible;
}

.bubble-img img {
  position: relative;
  top: 5px;
  border-radius: 0;
}

.bubble {
  background-color: #110077;
  border-radius: 30px;
  padding: 10px 70px;
  color: white;
  box-sizing: border-box;
  margin: 10px;
}

@media only screen and (min-width: 992px) {
  #front-page-3 {
    max-width: 100%;
  }
  .bubbles {
    margin: 20px 0;
    display: grid;
    grid-gap: 50px;
    max-width: 100%;
  }
  .bubble {
    box-sizing: border-box;
    position: relative;
    grid-column-start: 2;
    grid-column-end: 2;
  }
  .bubbles div:nth-child(1) {
    grid-column-start: 1;
    grid-column-end: 1;
    grid-row-start: 1;
    grid-row-end: 3;
  }
  .bubble-img {
    display: block;
    position: absolute;
    left: -45px;
    top: 20px;
  }
}

@media only screen and (min-width: 992px) {
  .two-column-section {
    display: flex;
    justify-content: space-between;
  }

  .two-column-section.reversed {
    flex-direction: row-reverse;
    justify-content: space-between;
  }
  .column {
    flex-basis: 45%;
    margin: 0% 0%;
  }

  .third-column {
    flex-basis: 30%;
    margin: 0% 0%;
  }
}

/* Heading floats */
@media only screen and (min-width: 992px) {
  .right-side {
    width: 100%;
    display: flex;
    justify-content: flex-end;
  }
  .right-side h2 {
    display: block;
    max-width: 600px;
    text-align: right;
  }
}

/* Diagonal headings */

@media only screen and (min-width: 992px) {
  .diagonal-box {
    display: flex;
    flex-direction: column;
  }
  .diagonal-box :nth-child(1) {
    align-self: flex-start;
  }
  .diagonal-box :nth-child(2) {
    align-self: center;
  }
  .diagonal-box :nth-child(3) {
    align-self: flex-end;
  }
}

/* Blog display */

.blog-display {
  display: flex;
  justify-content: center;
}

.article-body img {
  max-width: 80%;
}

.article-body h2 {
  font-family: "Cabin", sans-serif;
  text-transform: none;
  font-size: 2.5em;
}

/* .article-body img.odd {
  float: right;
  margin-left: 30px;
} */

/* Blog feed */
/* .blog-display * {
  margin: 0;
} */

.article-feed-sidebar {
  min-width: 20%;
  max-width: 400px;
  padding: 0 20px;
}

.article-feed-sidebar img {
  max-height: 200px;
  object-fit: cover;
}

.article-link {
  text-decoration: none;
  color: black;
}

.article-feed-sidebar article {
  box-sizing: border-box;
  margin-bottom: 30px;
}

.article-feed-sidebar article:hover {
  box-shadow: -18px 0 0 0 white, -23px 0 0 0 var(--orange);
}
.sample * {
  display: none;
}

.article-feed-sidebar .primary-link {
  float: right;
  margin-right: 0;
}

/* .sample p:nth-child(1) {
  display: inline-block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
} */

@media only screen and (min-width: 992px) {
  .full-page-article {
    max-width: 70%;
  }
}

/* ===================== INTERACTIVE COMPONENTS ==================== */

/* Primary link */

.primary-link,
.form-button {
  display: block;
  width: 40%;
  margin: auto;
  text-align: center;
  background-color: #ff5c00;
  box-shadow: 5px 5px #ff5c00bb, 10px 10px #ff5c0050;
  color: white;
  padding: 12px;
  text-decoration: none;
  box-sizing: border-box;
  margin-bottom: 20px;
}

.primary-link:hover {
  text-decoration: underline;
}

@media only screen and (min-width: 992px) {
  .primary-link,
  .form-button {
    display: inline-block;
    width: auto;
  }
  .primary-link.right {
    display: block;
    width: fit-content;
    margin-left: auto;
    margin-right: 0;
  }
}

.switcheroo,
.switcheroo-two {
  padding: 0;
  margin: 0;
  position: relative;
}

/* ============================= NAVBAR =================== */
.site-nav {
  position: fixed;
  background-color: #fff;
  top: 0;
  width: 100%;
  z-index: 100;
}

.nav-topper {
  display: flex;
  align-items: center;
  justify-content: center;
}

.menu {
  display: none;
}

.menu-toggle {
  position: absolute;
  right: 10px;
  font-size: 3em;
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  cursor: pointer;
  outline: inherit;
}

.logo {
  padding: 0;
  font-size: 1.5rem;
  margin: 0 !important;
  padding: 0;
  float: right;
}

.logo img {
  height: 30px;
  width: initial;
  border-radius: 0;
  fill: red;
  display: inline;
}

ul.menu {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.site-nav a {
  color: black;
  text-decoration: none;
  display: block;
  text-align: center;
  margin: auto;
  padding: 10px 0;
}

.mobile-menu li {
  width: 90%;
  margin: auto;
  margin-top: 0;
  margin-bottom: 0;
  box-sizing: border-box;
  /* border-bottom: 1px solid #18191a; */
}

/* .mobile-menu li:nth-child(1) {
  border-top: 1px solid #18191a;
} */

.mobile-menu .active {
  box-shadow: inset 20px 0 0 0 white, inset 40px 0 0 0 #66cfe7;
}

/* Tablet and above */
@media only screen and (min-width: 992px) {
  .nav-container {
    border-bottom: 2px solid black;
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-items: center;
    min-height: 50px;
    margin: auto;
    width: 90%;
  }

  .menu-toggle,
  .mobile-menu {
    display: none !important;
  }
  .desktop-menu {
    display: flex;
    align-items: center;
  }

  .site-nav .active {
    box-shadow: inset 0 -10px 0 0 #66cfe7;
  }
  .site-nav li {
    font-size: 1.5rem;
    float: left;
    margin-left: 90px;
    padding: 3px 0;
  }

  .site-nav a {
    padding: 0;
  }
  .site-nav a:hover {
    box-sizing: content-box;
    box-shadow: inset 0 -10px 0 0 #ff5c00;
    color: black;
  }

  /* .site-nav .active {
    border-bottom: 8px solid #ff5c00;
    background: none;
    color: black;
  } */
}

/* ==================== FOOTER =========================== */
footer {
  width: 100%;
  text-align: center;
  background: #18191a;
  color: white;
  padding: 12px;
  box-sizing: border-box;
  margin: auto;
}

#sm-links {
  margin: auto;
  display: flex;
  width: 50%;
  justify-content: center;
}

.sm-link {
  display: block;
  width: 40px;
  margin: 5px;
}

@media screen and (min-width: 992px) {
  .shadow-box-inner {
    box-shadow: 10px 10px 10px grey;
    padding-right: 60px;
  }
}

/* ============================ SHADOW BOX IMAGE TEMPLATE ==================== */

@media only screen and (min-width: 992px) {
  .shadow-box {
    position: relative;
    margin-bottom: 30px;
  }
  .shadow-box-inner {
    max-width: 75%;
  }

  .shadow-box-text {
    padding: 0 30px 30px 30px;
    max-width: 70%;
  }
  img.aside {
    max-height: none !important;
    width: 40%;
    height: 80%;
    position: absolute;
    top: 10%;
    right: 0%;
  }
}

/* ================== FRONT PAGE ================= */
img.house {
  display: none;
}

/* ============ TEAM MEMBER GRID ================== */
.team-grid {
  display: flex;
  flex-wrap: wrap;
  margin-block-start: 0;
  padding-inline-start: 0;
}

.profile {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
  text-align: left;
  list-style-type: none;
  margin: 20px;
  min-width: 30%;
  width: 430px;
  min-height: 65px;
}

.profile h4,
.profile p {
  margin: 0;
}

.profile img {
  width: 4em;
  border-radius: 100%;
  margin-right: 30px;
}

/* =================== FORMS ====================== */

form label {
  font-size: 1.1rem;
  display: block;
  position: relative;
}

form input[type="text"],
form input[type="email"],
form textarea {
  display: block;
  padding: 0.5em 1em;
  border: 2px solid;
  margin: 0.5em 0 1em 0;
  font-size: 1em;
  width: 80%;
  max-width: 500px;
  font-family: "Cabin", sans-serif;
}

form fieldset {
  border: none;
  padding: 0;
  margin-bottom: 20px;
  display: flex;
}

fieldset legend {
  font-size: 1.2rem;
  margin: 0;
  padding: 0;
  padding-bottom: 5px;
}

fieldset label {
  margin-top: 5px;
}

.form-button {
  font-family: "Cabin", sans-serif;
  font-size: 1em;
  border: none;
}

.form-button:hover {
  background-color: #110077;
  box-shadow: 5px 5px #110077bb, 10px 10px #11007750;
  cursor: pointer;
}

:focus {
  box-shadow: 0 0 0 2px black, 0 0 0 4px white;
  outline: 2px solid black;
}

/* =================== News =================== */
#secondary-articles,
#more-news-desktop {
  display: none;
}

img.aside {
  max-height: 50vh;
  object-fit: cover;
}

@media only screen and (min-width: 992px) {
  #more-news-mobile {
    display: none;
  }

  #secondary-articles {
    display: flex;
    justify-content: space-between;
  }

  #more-news-desktop {
    display: block;
  }
}

.underline.blue {
  border-bottom: 4px solid var(--blue);
}

.underline.orange {
  border-bottom: 4px solid var(--orange);
}

article.secondary img {
  height: 200px;
  object-fit: cover;
}

#secondary-articles a {
  flex-grow: 0.3;
}

#secondary-articles h3 {
  margin-bottom: 0;
}

.wrapper-link {
  text-decoration: none;
  color: black;
}

.all-post-feed article {
  display: flex;
  height: 250px;
  align-items: center;
  margin-bottom: 40px;
  box-shadow: 10px 10px 10px grey;
}

.all-post-feed img {
  width: 30%;
  object-fit: cover;
  height: 80%;
}

.all-post-feed .feed-text {
  margin-left: 30px;
}

